Optimization: Avoid fallback usage of hard values in Python3 classes
* This enables more static optimization on the class
  level, specifically for hard imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -154,7 +154,6 @@
         "iolddiv",
         "ipython",
         "isfile",
-        "startswith",
         "isgenerator",
         "isort",
         "iteritems",
@@ -234,11 +233,13 @@
         "Setuptools",
         "sourcery",
         "ssizeargfunc",
+        "startswith",
         "stdlib",
         "strchr",
         "sysexit",
         "sysflag",
         "ternaryfunc",
+        "Themida",
         "Tkinter",
         "tp_alloc",
         "tp_basicsize",
