Minor spelling cleanup

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1490,6 +1490,13 @@
           def __init__(self, name):
             pass
 
+- module-name: "pyzbar"
+  dlls:
+    - from_filenames:
+        prefixes:
+          - "libiconv"
+          - "libzbar"
+
 - module-name: "rapidfuzz"
   implicit-imports:
     - depends:
