Added Pandas compatibility for >= 1.0.0
Updated LooseVersion checks in anti bloat config

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1052,6 +1052,9 @@
     - description: "remove useless distutils usage"
       replacements:
         # TODO: Smells not only like regexp, must be one.
+        'LooseVersion("1.14")': "'\"1.14\"'"
+        'LooseVersion("1.15")': "'\"1.15\"'"
+        'LooseVersion("1.16")': "'\"1.16\"'"
         'LooseVersion("1.17")': "'\"1.17\"'"
         'LooseVersion("1.18")': "'\"1.18\"'"
         'LooseVersion("1.19")': "'\"1.19\"'"
