Added Pandas compatibility for >= 1.0.0
Updated LooseVersion checks in anti bloat config

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1067,6 +1067,7 @@
     - description: "remove useless distutils usage"
       replacements:
         'LooseVersion(__version__) >= LooseVersion("1.17.0")': "'__version__ >= \"1.17.0\"'"
+        'LooseVersion(_np_version) >= LooseVersion("1.17.0")': "'_np_version >= \"1.17.0\"'"
         "from distutils.version import LooseVersion": "''"
 
 - module-name: "pandas.core.arrays._arrow_utils"
