--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1052,6 +1052,9 @@
     - description: "remove useless distutils usage"
       replacements:
         # TODO: Smells not only like regexp, must be one.
+        'LooseVersion("1.14")': "'\"1.14\"'"
+        'LooseVersion("1.15")': "'\"1.15\"'"
+        'LooseVersion("1.16")': "'\"1.16\"'"
         'LooseVersion("1.17")': "'\"1.17\"'"
         'LooseVersion("1.18")': "'\"1.18\"'"
         'LooseVersion("1.19")': "'\"1.19\"'"
@@ -1064,6 +1067,7 @@
     - description: "remove useless distutils usage"
       replacements:
         'LooseVersion(__version__) >= LooseVersion("1.17.0")': "'__version__ >= \"1.17.0\"'"
+        'LooseVersion(_np_version) >= LooseVersion("1.17.0")': "'_np_version >= \"1.17.0\"'"
         "from distutils.version import LooseVersion": "''"
 
 - module-name: "pandas.core.arrays._arrow_utils"
