Python3.9+: Added support for "importlib.resources.files"
* This adds traversable objects, for which iteration works top level currently
  only, but it opens files, checks them, etc. all fine.

* This at least corrects "jsonschema" with Python3.10 due to crashes
  in compatibility layers.

* Also a few spelling cleanups were done.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,8 @@
         "_wtoi",
         "_XOPEN_SOURCE",
         "abiflags",
+        "abstractmethod",
+        "abstractproperty",
         "appdirs",
         "asyncgen",
         "backslashreplace",
@@ -156,9 +158,12 @@
         "isfile",
         "isgenerator",
         "isort",
+        "iterdir",
         "iteritems",
         "iterkeys",
+        "iternextfunc",
         "itervalues",
+        "joinpath",
         "Kivy",
         "kwargs",
         "kwds",
@@ -194,6 +199,7 @@
         "Organisational",
         "otool",
         "patchelf",
+        "pathlib",
         "Pickler",
         "pipenv",
         "pkglib",
@@ -259,6 +265,7 @@
         "traceback",
         "tracebacks",
         "traverseproc",
+        "truediv",
         "tshape",
         "ucrt",
         "uncompiled",
