Standalone: Added support for "pyfiglet" fonts

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1391,6 +1391,16 @@
     - depends:
         - "typing_extensions"
 
+- module-name: "pyfiglet"
+  implicit-imports:
+    - depends:
+        - ".fonts"
+
+- module-name: "pyfiglet.fonts"
+  data-files:
+    dirs:
+      - "."
+
 - module-name: "pyglet"
   implicit-imports:
     - depends:
