Onefile: More auto-update work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -280,7 +280,9 @@
         "virtualenv",
         "visitproc",
         "vmprof",
+        "wargv",
         "winlibs",
+        "wmain",
         "zstandard",
         "zstd"
     ],
