Anti-Bloat: Avoid doctest/unittest dependency when using "pyrect"

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1477,6 +1477,12 @@
         - "pyreadstat.worker"
         - "multiprocessing"
 
+- module-name: "pyrect"
+  anti-bloat:
+    - description: "remove doctest reference"
+      replacements_plain:
+        "import doctest": ""
+
 - module-name: "PySide2"
   options:
     checks:
