Quality: Change yaml standard quote to single quote
* Double quotes require escaping of values on the Yaml level, but
  single quotes do not.

* This will be esp. evident with regular expressions and slashes
  in there needing to escape one level less.

--- a/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib2.nuitka-package.config.yml
@@ -3,83 +3,83 @@
 # yamllint disable rule:comments-indentation
 # too many spelling things, spell-checker: disable
 ---
-- module-name: "audiodev"
+- module-name: 'audiodev'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "BaseHTTPServer"
+- module-name: 'BaseHTTPServer'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "Bastion"
+- module-name: 'Bastion'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
 
       change_function:
-        "_test": "'(lambda: None)'"
+        '_test': "'(lambda: None)'"
 
-- module-name: "Cookie"
+- module-name: 'Cookie'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "_test": "'(lambda: None)'"
+        '_test': "'(lambda: None)'"
   implicit-imports:
     - depends:
-        - "_bootlocale"
+        - '_bootlocale'
 
-- module-name: "fpformat"
+- module-name: 'fpformat'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "mhlib"
+- module-name: 'mhlib'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "modulefinder"
+- module-name: 'modulefinder'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "rexec"
+- module-name: 'rexec'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "StringIO"
+- module-name: 'StringIO'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
 
-- module-name: "Tkinter"
+- module-name: 'Tkinter'
   implicit-imports:
     - depends:
-        - "_tkinter"
+        - '_tkinter'
 
   options:
     checks:
-      - console: "recommend"
+      - console: 'recommend'
 
-        macos_bundle_as_onefile: "yes"
+        macos_bundle_as_onefile: 'yes'
 
-- module-name: "xml.sax.xmlreader"
+- module-name: 'xml.sax.xmlreader'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "_test": "'(lambda: None)'"
+        '_test': "'(lambda: None)'"
 
-- module-name: "xmllib"
+- module-name: 'xmllib'
   anti-bloat:
-    - description: "remove module ability to run as a binary"
+    - description: 'remove module ability to run as a binary'
       change_function:
-        "test": "'(lambda: None)'"
+        'test': "'(lambda: None)'"
