--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -271,7 +271,8 @@
         "uncompiled",
         "unoptimized",
         "unorderable",
-        "unstriped",
+        "unstripped",
+        "Valgrind",
         "vectorcall",
         "vectorcallfunc",
         "viewitems",
