Standalone: Added data file of "distributed.config"

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -258,6 +258,11 @@
       replacements_plain:
         'from .testing import setup_test': ''
 
+- module-name: 'distributed.config'
+  data-files:
+    patterns:
+      - 'distributed.yaml'
+
 - module-name: 'distributed.scheduler'
   anti-bloat:
     - description: 'remove cython support'
