Standalone: Added "pyscf" package data files

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1631,6 +1631,11 @@
         prefixes:
           - 'libcgto'
 
+- module-name: 'pyscf.gto.basis'
+  data-files:
+    patterns:
+      - '**/*.dat'
+
 - module-name: 'pyscf.lib.numpy_helper'
   dlls:
     - from_filenames:
