Standalone: Added data file of "echopype" package

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -283,6 +283,11 @@
         - '.IN.A'
         - '.CH.A'
 
+- module-name: 'echopype.echodata.convention'
+  data-files:
+    patterns:
+      - '*.yml'
+
 - module-name: 'eel'
   data-files:
     patterns:
